third_party/move/move-compiler-v2/tests/visibility-checker/call_private_function.exp

Diagnostics:
error: function `0xdeadbeef::M::foo` cannot be called here because it is private to module `0xdeadbeef::M`
  ┌─ tests/visibility-checker/call_private_function.move:9:9
  │
9 │         0xdeadbeef::M::foo() + my_foo()
  │         ^^^^^^^^^^^^^^^^^^^^
